<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.areastudio.jwterritorio.activities.NewAddressActivity"
    tools:showIn="@layout/activity_new_address">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_info" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/gender" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:button="@drawable/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:button="@drawable/female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <Spinner
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ages"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <Spinner
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/languages"/>

            <CheckBox
                android:id="@+id/sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handicap" />

            <CheckBox
                android:id="@+id/deaf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaf" />

            <CheckBox
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute" />

            <CheckBox
                android:id="@+id/blind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blind" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/territory_title"
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/territory" />
        <Spinner
            android:id="@+id/territory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_type" />
        <Spinner
            android:id="@+id/contactType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/contact_type"/>


        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_title" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/latitude" />

            <EditText
                android:id="@+id/lng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/longitude" />/>

            <ImageButton
                android:id="@+id/map_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map_white_48dp" />
        </LinearLayout>

        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_title" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:lines="4" />
        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family_title" />

        <EditText
            android:id="@+id/familyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_description"
            android:lines="4" />
    </LinearLayout>
</ScrollView>
