<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map_white_48dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_navigate"
        android:orderInCategory="100"
        android:title="@string/action_navigate"
        android:icon="@drawable/ic_navigation_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_my_dir"
        android:orderInCategory="100"
        android:title="@string/action_add_to_my_dir"
        app:showAsAction="never" />

</menu>
