<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.areastudio.jwterritorio.activities.ViewAddressActivity"
    tools:showIn="@layout/activity_view_address">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.TextSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/name" />

            <TextView
                android:textIsSelectable="true"
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/address" />

            <TextView
                android:textIsSelectable="true"
                android:id="@+id/home_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/home_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/icon_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:src="@drawable/icons8_user_male_skin_type_4_50"

                        />

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        tools:text="Joven" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/icon_gender"
                        tools:text="Portugués" />

                    <CheckBox
                        android:id="@+id/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/language"
                        android:enabled="false"
                        android:text="@string/sign" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_type" />

                    <Spinner
                        android:id="@+id/contactType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/contact_type"/>
                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/handicap" />

                <CheckBox
                    android:id="@+id/deaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/deaf" />

                <CheckBox
                    android:id="@+id/mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/mute" />

                <CheckBox
                    android:id="@+id/blind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/blind" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/phone"
                    android:textIsSelectable="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                style="@style/AppTheme.TextSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_title"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="3"
                android:textIsSelectable="true"
                tools:text="@string/notes" />

            <TextView

                style="@style/AppTheme.TextSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/family_title"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/familyDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="3"
                android:textIsSelectable="true"
                tools:text="@string/family_description" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visits_title"
            android:textAllCaps="true" />

        <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/visits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--</ScrollView>-->
    </LinearLayout>
</LinearLayout>
