<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">&ndash;&gt;-->
        <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/nav_camera"&ndash;&gt;-->
            <!--&lt;!&ndash;android:icon="@drawable/ic_menu_camera"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="Import" />&ndash;&gt;-->
        <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/nav_gallery"&ndash;&gt;-->
            <!--&lt;!&ndash;android:icon="@drawable/ic_menu_gallery"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="Gallery" />&ndash;&gt;-->
        <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/nav_slideshow"&ndash;&gt;-->
            <!--&lt;!&ndash;android:icon="@drawable/ic_menu_slideshow"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="Slideshow" />&ndash;&gt;-->
        <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/nav_manage"&ndash;&gt;-->
            <!--&lt;!&ndash;android:icon="@drawable/ic_menu_manage"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="Tools" />&ndash;&gt;-->
    <!--</group>&ndash;&gt;-->

    <item android:title="Emergencias">
        <menu>
            <item
                android:id="@+id/nav_emergencias"
                android:icon="@drawable/ic_local_hospital_black_48dp"
                android:title="@string/medical_atention" />
            <item
                android:id="@+id/nav_calls"
                android:icon="@drawable/ic_phone_black_48dp"
                android:title="@string/contacts" />
        </menu>
    </item>
    <item android:id="@+id/poi" android:title="@string/puntos_of_interest"
        android:icon="@drawable/baseline_map_black_48dp"/>

</menu>
